# sqdiff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: after-e2e.yml  after.yml  e2e-tests.yml
sqdiff/: sqdiff.py
