[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqdiff"
version = "0.0.1"
authors = [
  { name="Íñigo Mediavilla Saiz", email="imediava@gmail.com" },
]
dependencies = [
  'icdiff ==2.0.7',
  'sqlparse ==0.5.3',
]
description = "Colored diff for sql queries"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sqdiff = "sqdiff.sqdiff:start"

[project.urls]
Homepage = "https://github.com/txominpelu/sqdiff"
